增加云生产

--- a/WebContent/cpList.html
+++ b/WebContent/cpList.html
@@ -20,7 +20,7 @@
 		//聚焦指定的Tab
 		$("#support-tab").addClass("active");
 		 
-		$("#mdn-bar").addClass("active").find("i").addClass("icon-white");
+		$("#cp-bar").addClass("active").find("i").addClass("icon-white");
 	});
 </script>
 
@@ -74,7 +74,7 @@
 			</div>
 
 			<div id="main" class="span10">
-				<a class="btn btn-info pager" href="./MDNForm.html">Create MDN</a>
+				<a class="btn btn-info pager" href="./cpForm.html">Create CP</a>
 
 				<!-- Search -->
 				<form class="well well-small form-search"
@@ -107,7 +107,7 @@
 					<tbody>
 						<tr>
 							<td>liukai</td>
-							<td>mdn-admin-12345678</td>
+							<td>cp-admin-12345678</td>
 							<td><span class="label label-important">待审核</span></td>
 							<td><a href="./FeatureDetail.html">查看</a> <a
 								href="./FeatureForm.html">修改</a></td>
