--- a/WebContent/MDNForm.html
+++ b/WebContent/MDNForm.html
@@ -99,34 +99,21 @@
 			<div id="leftbar" class="span2">
 				<ul class="nav nav-list">
 					<li class="nav-header">我的申请</li>
-					<li id="all-bar"><a href="./ECSList.html"><i id="all-icon"
-							class="icon-hdd"></i>All</a></li>
+					<li id="all-bar"><a href="./ECSList.html"><i id="all-icon" class="icon-hdd"></i>All</a></li>
 					<li class="divider"></li>
 					<li class="nav-header">基础架构服务</li>
-					<li id="pcs-bar"><a href="./PCSList.html"><i id="pcs-icon"
-							class="icon-retweet"></i>PCS</a></li>
-					<li id="ecs-bar"><a href="./ECSList.html"><i id="ecs-icon"
-							class="icon-retweet"></i>ECS</a></li>
-					<li id="es3-bar"><a href="./ES3List.html"><i id="es3-icon"
-							class="icon-inbox"></i>ES3</a></li>
-					<li id="eip-bar"><a href="./EIPList.html"><i id="eip-icon"
-							class="icon-file"></i>EIP</a></li>
-					<li id="elb-bar"><a href="./ELBList.html"><i id="elb-icon"
-							class="icon-cog"></i>ELB</a></li>
-					<li id="esg-bar"><a href="#"><i id="esg-icon"
-							class="icon-cog"></i>ESG</a></li>
+					<li id="ecs-bar"><a href="./ECSList.html"><i id="ecs-icon" class="icon-retweet"></i>ECS</a></li>
+					<li id="es3-bar"><a href="./ES3List.html"><i id="es3-icon" class="icon-inbox"></i>ES3</a></li>
+					<li id="eip-bar"><a href="./EIPList.html"><i id="eip-icon" class="icon-file"></i>EIP</a></li>
+					<li id="elb-bar"><a href="./ELBList.html"><i id="elb-icon" class="icon-cog"></i>ELB</a></li>
+					<li id="esg-bar"><a href="#"><i id="esg-icon" class="icon-cog"></i>ESG</a></li>
 					<li class="divider"></li>
 					<li class="nav-header">平台服务</li>
-					<li id="mdn-bar"><a href="./MDNList.html"><i id="mdn-icon"
-							class="icon-user"></i>MDN</a></li>
-					<li id="media-bar"><a href="./MediaList.html"><i
-							id="media-icon" class="icon-user"></i>媒体处理</a></li>
-					<li id="content-bar"><a href="./contentList.html"><i
-							id="content-icon" class="icon-user"></i>内容仓库</a></li>
+					<li id="mdn-bar"><a href="./MDNList.html"><i id="mdn-icon" class="icon-user"></i>MDN</a></li>
+					<li id="cp-bar"><a href="./cpList.html"><i id="cp-icon" class="icon-user"></i>云生产</a></li>
 					<li class="divider"></li>
 					<li class="nav-header">软件服务</li>
-					<li id="bsp-bar"><a href="./BSPList.html"><i id="mdn-con"
-							class="icon-user"></i>BSP</a></li>
+					<li id="bsp-bar"><a href="./BSPList.html"><i id="mdn-con" class="icon-user"></i>BSP</a></li>
 					<li><a href="#"><i class="icon-user"></i>数据加工</a></li>
 					<li><a href="#"><i class="icon-user"></i>拆条</a></li>
 					<li><a href="#"><i class="icon-user"></i>编目</a></li>
@@ -519,7 +506,6 @@
 				</form>
 			</div>
 		</div>
-
 
 		<!-- Footer -->
 		<div id="footer" class="span12">Copyright &copy; 2005-2012 Sobey</div>
