--- a/WebContent/BugForm.html
+++ b/WebContent/BugForm.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -18,6 +18,15 @@
 	$(document).ready(function() {
 		//聚焦指定的Tab
 		$("#bug-tab").addClass("active");
+	});
+
+	$(document).on("click", "upload_btn", function() {
+
+		var $input = $(this).closest('#upload_input');
+
+		var $clone = $input.clone();
+		$("#fileDiv").after($clone);
+
 	});
 </script>
 </head>
@@ -50,49 +59,87 @@
 			<div class="tab-content">
 				<div class=" span6 offset3">
 
-						<h3>故障申报</h3>
+					<fieldset>
+						<legend>
+							<small>故障申报</small>
+						</legend>
+
+						<div class="control-group">
+							<label class="control-label">标题</label>
+							<div class="controls">
+								<input type="text" value="" class="input-large">
+							</div>
+						</div>
+
+
+						<div class="control-group">
+							<label for="focusedInput" class="control-label">类别</label>
+							<div class="controls">
+								<select>
+									<option>基础资源</option>
+									<option>云生产</option>
+									<option>MDN</option>
+									<option>VMS</option>
+								</select>
+							</div>
+						</div>
+
+						<div class="control-group">
+							<label for="focusedInput" class="control-label">优先级</label>
+							<div class="controls">
+								<select>
+									<option>低</option>
+									<option>普通</option>
+									<option>高</option>
+									<option>紧急</option>
+									<option>立刻</option>
+								</select>
+							</div>
+						</div>
+
+						<div class="control-group">
+							<label for="focusedInput" class="control-label">受理人</label>
+							<div class="controls">
+								<select>
+									<option>余波</option>
+								</select>
+							</div>
+						</div>
+
+						<div class="control-group">
+							<label class="control-label">故障现象及描述</label>
+							<div class="controls">
+								<textarea rows="2" id="bug_info" class="input-xlarge"></textarea>
+							</div>
+						</div>
+
+
+						<div class="control-group">
+							<label class="control-label">附件上传(截图或日志)</label>
+							<div class="controls">
+
+								<div id="fileDiv">
+									<input type="file" id="upload_input"><input type="button" id="upload_btn" value="新增">
+								</div>
+
+									
+							</div>
+						</div>
+
+
 						<hr>
-
-					<div class="control-group">
-						<label class="control-label">故障申报主题</label>
-						<div class="controls">
-							<input type="text" value="" class="input-large">
+						<div>
+							<button class="btn btn-primary" type="submit">保存修改</button>
+							<button class="btn">取消</button>
 						</div>
-					</div>
-
-					<div class="control-group">
-						<label for="focusedInput" class="control-label">优先级</label>
-						<div class="controls">
-							<select>
-								<option>低</option>
-								<option>普通</option>
-								<option>高</option>
-								<option>紧急</option>
-								<option>立刻</option>
-							</select>
-						</div>
-					</div>
-
-
-					<div class="control-group">
-						<label class="control-label">故障详细描述</label>
-						<div class="controls">
-							<textarea rows="2" id="bug_info" class="input-xlarge"></textarea>
-						</div>
-					</div>
-					<hr>
-					<div>
-						<button class="btn btn-primary" type="submit">保存修改</button>
-						<button class="btn">取消</button>
-					</div>
-
+					</fieldset>
 				</div>
 			</div>
 
 		</form>
 
 
-	<!-- Footer -->
+		<!-- Footer -->
 		<div id="footer" class="span12">Copyright &copy; 2005-2012 Sobey</div>
 	</div>
 
