--- a/WebContent/Home.html
+++ b/WebContent/Home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -29,7 +29,7 @@
 	<div class="container">
 
 		<!-- Header -->
-		<div class=" ">
+		<div class="">
 		
 		<img alt="索贝云平台管理系统" src="./img/logo.jpg" >
 			 
@@ -74,7 +74,7 @@
 					<li>可根据条件进行查询.</li>
 				</ul>
 				<p>
-					<a href="./SupportList.html" class="btn">更多 »</a>
+					<a href="./monitorForm.html" class="btn">更多 »</a>
 				</p>
 			</div>
 
